--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -55,7 +55,7 @@
                                 <% if (movie.poster) { %>
                                     <a href="<%- movie.url %>" style="float: left">
                                         <div class="cinemapress-poster">
-                                            <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= page.title %>" title="<%= page.title %>" id="cinemapress-poster">
+                                            <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= page.title %>" title="<%= page.title %>" data-cinemapress-poster="<%- movie.poster %>">
                                             <% if (movie.quality) { %>
                                                 <div class="cinemapress-quality">
                                                     <span class="cinemapress-svg-quality"></span>
