--- a/views/category.ejs
+++ b/views/category.ejs
@@ -113,7 +113,7 @@
                                     <% if (movie.poster) { %>
                                         <a href="<%- movie.url %>" style="float: left;">
                                             <div class="cinemapress-poster">
-                                                <img src="<%- movie.poster %>" style="width: 200px; height: 300px;"
+                                                <img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>" style="width: 200px; height: 300px;"
                                                      alt="<%= movie.title %> (<%- movie.year %>)"
                                                      title="<%= movie.title %> (<%- movie.year %>)">
                                                 <% if (movie.quality) { %>
