--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -67,7 +67,7 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- category.name 
                             <% } %>
                     >
                         <a href="<%- movie.url %>" rel="nofollow">
-                            <img src="<%- movie.poster %>" alt="<%= movie.title %>">
+                            <img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>" alt="<%= movie.title %>">
                             <br><%= movie.title %><br>
                             <small>
                                 <% if (movie.season && movie.episode) { %><%- movie.season %> <%- page.l.season %> <%- movie.episode %> <%- page.l.episode %><% if (movie.translate) { %>
@@ -98,7 +98,7 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- page.l.soon %>
                 <% soon.forEach(function (movie) { %>
                     <li class="li_serial">
                         <a href="<%- movie.url %>" rel="nofollow">
-                            <img src="<%- movie.poster %>" alt="<%= movie.title %>">
+                            <img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>" alt="<%= movie.title %>">
                             <br>
                             <%= movie.title %> (<%- movie.year %>)
                         </a>
