--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -52,7 +52,7 @@
                                 <% if (movie.poster) { %>
                                     <a href="<%- movie.url %>" style="float: left">
                                         <div class="cinemapress-poster">
-                                            <img src="<%- movie.poster %>" style="width: 200px; height: 300px;"
+                                            <img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>" style="width: 200px; height: 300px;"
                                                  alt="<%= page.title %>" title="<%= page.title %>"
                                                  data-cinemapress-poster="<%- movie.poster %>">
                                             <% if (movie.quality) { %>
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                     <div class="relatednews">
-                        <ul class="ul_related"><% if (typeof category === 'object' && category.movies && category.movies.length) { category.movies.splice(5, category.movies.length % 5); category.movies.forEach(function (movie) { %><li><a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)"><img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>"><%= movie.title %> (<%- movie.year %>)</a></li><% }); } %></ul>
+                        <ul class="ul_related"><% if (typeof category === 'object' && category.movies && category.movies.length) { category.movies.splice(5, category.movies.length % 5); category.movies.forEach(function (movie) { %><li><a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)"><img src="<%- movie.poster_min %>" data-cinemapress-src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>"><%= movie.title %> (<%- movie.year %>)</a></li><% }); } %></ul>
                     </div>
                 <% }); } } } %>
 
